Some final adjustments for 2.4.1
- TapiFm: DetectedCondition augments the new ActiveCondition, composed
by the new FaultManagementContext.
- TapiOam: identity wrongly in package diagrams
- TapiTopology/Notification/PathComp/Oam/VirtualNtw: Comments

--- a/OAS/tapi-connectivity.yaml
+++ b/OAS/tapi-connectivity.yaml
@@ -25542,7 +25542,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "returns tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         200:
@@ -25555,7 +25555,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -25575,7 +25575,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates or updates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -25595,7 +25595,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "removes tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         400:
@@ -29632,7 +29632,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         200:
@@ -29645,7 +29645,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.context.TopologyContext.body-param"
@@ -29664,7 +29664,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates or updates tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.context.TopologyContext.body-param"
@@ -29683,7 +29683,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "removes tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         400:
@@ -35748,7 +35748,7 @@ definitions:
     type: "object"
     properties:
       path-computation-context:
-        description: "Augments the base TAPI Context with PathComputationService model."
+        description: "Augments the base TAPI Context with PathComputationContext model."
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
       prefix: "tapi-path-computation"
@@ -36634,7 +36634,7 @@ definitions:
     type: "object"
     properties:
       topology-context:
-        description: "Augments the base TAPI Context with TopologyService model."
+        description: "Augments the base TAPI Context with TopologyContext model."
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
