--- a/OAS/tapi-equipment.yaml
+++ b/OAS/tapi-equipment.yaml
@@ -30261,7 +30261,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "returns tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         200:
@@ -30274,7 +30274,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -30294,7 +30294,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates or updates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -30314,7 +30314,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "removes tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         400:
@@ -34351,7 +34351,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         200:
@@ -34364,7 +34364,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.context.TopologyContext.body-param"
@@ -34383,7 +34383,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates or updates tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.context.TopologyContext.body-param"
@@ -34402,7 +34402,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "removes tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         400:
@@ -41658,7 +41658,7 @@ definitions:
     type: "object"
     properties:
       path-computation-context:
-        description: "Augments the base TAPI Context with PathComputationService model."
+        description: "Augments the base TAPI Context with PathComputationContext model."
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
       prefix: "tapi-path-computation"
@@ -42544,7 +42544,7 @@ definitions:
     type: "object"
     properties:
       topology-context:
-        description: "Augments the base TAPI Context with TopologyService model."
+        description: "Augments the base TAPI Context with TopologyContext model."
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
