--- a/OAS/tapi-oam.yaml
+++ b/OAS/tapi-oam.yaml
@@ -29520,7 +29520,7 @@ paths:
       tags:
       - "tapi-oam"
       summary: "returns tapi.oam.OamContext"
-      description: "Augments the base TAPI Context with OamService model."
+      description: "Augments the base TAPI Context with OamContext model."
       parameters: []
       responses:
         200:
@@ -29533,7 +29533,7 @@ paths:
       tags:
       - "tapi-oam"
       summary: "creates tapi.oam.OamContext"
-      description: "Augments the base TAPI Context with OamService model."
+      description: "Augments the base TAPI Context with OamContext model."
       parameters:
       - in: "body"
         name: "tapi.oam.OamContext.body-param"
@@ -29552,7 +29552,7 @@ paths:
       tags:
       - "tapi-oam"
       summary: "creates or updates tapi.oam.OamContext"
-      description: "Augments the base TAPI Context with OamService model."
+      description: "Augments the base TAPI Context with OamContext model."
       parameters:
       - in: "body"
         name: "tapi.oam.OamContext.body-param"
@@ -29571,7 +29571,7 @@ paths:
       tags:
       - "tapi-oam"
       summary: "removes tapi.oam.OamContext"
-      description: "Augments the base TAPI Context with OamService model."
+      description: "Augments the base TAPI Context with OamContext model."
       parameters: []
       responses:
         400:
@@ -32526,7 +32526,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "returns tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         200:
@@ -32539,7 +32539,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -32559,7 +32559,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates or updates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -32579,7 +32579,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "removes tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         400:
@@ -36616,7 +36616,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         200:
@@ -36629,7 +36629,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.context.TopologyContext.body-param"
@@ -36648,7 +36648,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates or updates tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.context.TopologyContext.body-param"
@@ -36667,7 +36667,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "removes tapi.topology.context.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         400:
@@ -43496,7 +43496,7 @@ definitions:
     type: "object"
     properties:
       oam-context:
-        description: "Augments the base TAPI Context with OamService model."
+        description: "Augments the base TAPI Context with OamContext model."
         $ref: "#/definitions/tapi.oam.OamContext"
     x-augmentation:
       prefix: "tapi-oam"
@@ -44779,7 +44779,7 @@ definitions:
     type: "object"
     properties:
       path-computation-context:
-        description: "Augments the base TAPI Context with PathComputationService model."
+        description: "Augments the base TAPI Context with PathComputationContext model."
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
       prefix: "tapi-path-computation"
@@ -45665,7 +45665,7 @@ definitions:
     type: "object"
     properties:
       topology-context:
-        description: "Augments the base TAPI Context with TopologyService model."
+        description: "Augments the base TAPI Context with TopologyContext model."
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
