--- a/OAS/tapi-path-computation.yaml
+++ b/OAS/tapi-path-computation.yaml
@@ -10101,7 +10101,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "returns tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         200:
@@ -10114,7 +10114,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -10134,7 +10134,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "creates or updates tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters:
       - in: "body"
         name: "tapi.path.computation.PathComputationContext.body-param"
@@ -10154,7 +10154,7 @@ paths:
       tags:
       - "tapi-path-computation"
       summary: "removes tapi.path.computation.PathComputationContext"
-      description: "Augments the base TAPI Context with PathComputationService model."
+      description: "Augments the base TAPI Context with PathComputationContext model."
       parameters: []
       responses:
         400:
@@ -14191,7 +14191,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         200:
@@ -14204,7 +14204,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.TopologyContext.body-param"
@@ -14223,7 +14223,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates or updates tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.TopologyContext.body-param"
@@ -14242,7 +14242,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "removes tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         400:
@@ -18381,7 +18381,7 @@ definitions:
     type: "object"
     properties:
       path-computation-context:
-        description: "Augments the base TAPI Context with PathComputationService model."
+        description: "Augments the base TAPI Context with PathComputationContext model."
         $ref: "#/definitions/tapi.path.computation.PathComputationContext"
     x-augmentation:
       prefix: "tapi-path-computation"
@@ -19267,7 +19267,7 @@ definitions:
     type: "object"
     properties:
       topology-context:
-        description: "Augments the base TAPI Context with TopologyService model."
+        description: "Augments the base TAPI Context with TopologyContext model."
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
