--- a/OAS/tapi-topology.yaml
+++ b/OAS/tapi-topology.yaml
@@ -9302,7 +9302,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         200:
@@ -9315,7 +9315,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.TopologyContext.body-param"
@@ -9334,7 +9334,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates or updates tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.TopologyContext.body-param"
@@ -9353,7 +9353,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "removes tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         400:
@@ -13770,7 +13770,7 @@ definitions:
     type: "object"
     properties:
       topology-context:
-        description: "Augments the base TAPI Context with TopologyService model."
+        description: "Augments the base TAPI Context with TopologyContext model."
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
