--- a/OAS/tapi-virtual-network.yaml
+++ b/OAS/tapi-virtual-network.yaml
@@ -10001,7 +10001,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "returns tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         200:
@@ -10014,7 +10014,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.TopologyContext.body-param"
@@ -10033,7 +10033,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "creates or updates tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters:
       - in: "body"
         name: "tapi.topology.TopologyContext.body-param"
@@ -10052,7 +10052,7 @@ paths:
       tags:
       - "tapi-topology"
       summary: "removes tapi.topology.TopologyContext"
-      description: "Augments the base TAPI Context with TopologyService model."
+      description: "Augments the base TAPI Context with TopologyContext model."
       parameters: []
       responses:
         400:
@@ -12868,7 +12868,7 @@ paths:
       tags:
       - "tapi-virtual-network"
       summary: "returns tapi.virtual.network.VirtualNetworkContext"
-      description: "Augments the base TAPI Context with VirtualNetworkService model."
+      description: "Augments the base TAPI Context with VirtualNetworkContext model."
       parameters: []
       responses:
         200:
@@ -12881,7 +12881,7 @@ paths:
       tags:
       - "tapi-virtual-network"
       summary: "creates tapi.virtual.network.VirtualNetworkContext"
-      description: "Augments the base TAPI Context with VirtualNetworkService model."
+      description: "Augments the base TAPI Context with VirtualNetworkContext model."
       parameters:
       - in: "body"
         name: "tapi.virtual.network.VirtualNetworkContext.body-param"
@@ -12900,7 +12900,7 @@ paths:
       tags:
       - "tapi-virtual-network"
       summary: "creates or updates tapi.virtual.network.VirtualNetworkContext"
-      description: "Augments the base TAPI Context with VirtualNetworkService model."
+      description: "Augments the base TAPI Context with VirtualNetworkContext model."
       parameters:
       - in: "body"
         name: "tapi.virtual.network.VirtualNetworkContext.body-param"
@@ -12919,7 +12919,7 @@ paths:
       tags:
       - "tapi-virtual-network"
       summary: "removes tapi.virtual.network.VirtualNetworkContext"
-      description: "Augments the base TAPI Context with VirtualNetworkService model."
+      description: "Augments the base TAPI Context with VirtualNetworkContext model."
       parameters: []
       responses:
         400:
@@ -16011,7 +16011,7 @@ definitions:
     type: "object"
     properties:
       topology-context:
-        description: "Augments the base TAPI Context with TopologyService model."
+        description: "Augments the base TAPI Context with TopologyContext model."
         $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
@@ -17028,7 +17028,7 @@ definitions:
     type: "object"
     properties:
       virtual-network-context:
-        description: "Augments the base TAPI Context with VirtualNetworkService model."
+        description: "Augments the base TAPI Context with VirtualNetworkContext model."
         $ref: "#/definitions/tapi.virtual.network.VirtualNetworkContext"
     x-augmentation:
       prefix: "tapi-virtual-network"
