--- a/OAS/tapi-fm.yaml
+++ b/OAS/tapi-fm.yaml
@@ -639,6 +639,300 @@ paths:
             $ref: "#/definitions/tapi.common.CapacityValueWrapper"
         400:
           description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.fm.context.FaultManagementContext"
+      description: "Augments the base TAPI Context with FaultManagementContext model."
+      parameters: []
+      responses:
+        200:
+          description: "tapi.fm.context.FaultManagementContext"
+          schema:
+            $ref: "#/definitions/tapi.fm.context.FaultManagementContextWrapper"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-fm"
+      summary: "creates tapi.fm.context.FaultManagementContext"
+      description: "Augments the base TAPI Context with FaultManagementContext model."
+      parameters:
+      - in: "body"
+        name: "tapi.fm.context.FaultManagementContext.body-param"
+        description: "tapi.fm.context.FaultManagementContext to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.fm.context.FaultManagementContextWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-fm"
+      summary: "creates or updates tapi.fm.context.FaultManagementContext"
+      description: "Augments the base TAPI Context with FaultManagementContext model."
+      parameters:
+      - in: "body"
+        name: "tapi.fm.context.FaultManagementContext.body-param"
+        description: "tapi.fm.context.FaultManagementContext to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.fm.context.FaultManagementContextWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-fm"
+      summary: "removes tapi.fm.context.FaultManagementContext"
+      description: "Augments the base TAPI Context with FaultManagementContext model."
+      parameters: []
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.fm.faultmanagementcontext.ActiveCondition"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.fm.faultmanagementcontext.ActiveCondition"
+          schema:
+            $ref: "#/definitions/tapi.fm.faultmanagementcontext.ActiveConditionWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/additional-info={value-name}:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.common.NameAndValue"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of additional-info"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.fm.DetectedCondition"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.fm.DetectedCondition"
+          schema:
+            $ref: "#/definitions/tapi.fm.DetectedConditionWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition/detector-info:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.fm.DetectorInfo"
+      description: "The detector info for alarm and TCA."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.fm.DetectorInfo"
+          schema:
+            $ref: "#/definitions/tapi.fm.DetectorInfoWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition/pm-metric-info:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.fm.PmMetricInfo"
+      description: "The PM metric information."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.fm.PmMetricInfo"
+          schema:
+            $ref: "#/definitions/tapi.fm.PmMetricInfoWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition/pm-metric-info/granularity-period/
+  : get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.common.TimePeriod"
+      description: "The granularity period or measurement interval time.\r\n     \
+        \           This parameter may be necessary when the reference to the OAM\
+        \ Job is not included, e.g. in case the OAM job is not visible at the management\
+        \ interface."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.TimePeriod"
+          schema:
+            $ref: "#/definitions/tapi.common.TimePeriodWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition/pm-metric-info/threshold-configured-value/
+  : get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.common.PmParameterValue"
+      description: "The configured threshold value of PM metric to which TCA refers\
+        \ to."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.PmParameterValue"
+          schema:
+            $ref: "#/definitions/tapi.common.PmParameterValueWrapper"
+        400:
+          description: "Internal error"
+  ? /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition/pm-metric-info/threshold-observed-value/
+  : get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.common.PmParameterValue"
+      description: "The observed value of PM metric to which TCA refers to."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.PmParameterValue"
+          schema:
+            $ref: "#/definitions/tapi.common.PmParameterValueWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/detected-condition/simple-detector:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.fm.SimpleDetector"
+      description: "The simple detector state."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.fm.SimpleDetector"
+          schema:
+            $ref: "#/definitions/tapi.fm.SimpleDetectorWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/name={value-name}:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.common.NameAndValue"
+      description: "List of names. This value is unique in some namespace but may\
+        \ change during the life of the entity.\r\n                A name carries\
+        \ no semantics with respect to the purpose of the entity."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of name"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
+  /data/tapi-common:context/tapi-fm:fault-management-context/active-condition={uuid}/target-object-name={value-name}:
+    get:
+      tags:
+      - "tapi-fm"
+      summary: "returns tapi.common.NameAndValue"
+      description: "The ActiveCondition instance is related to the object instance\
+        \ with this list of names."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of active-condition"
+        required: true
+        type: "string"
+      - name: "value-name"
+        in: "path"
+        description: "Id of target-object-name"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.common.NameAndValue"
+          schema:
+            $ref: "#/definitions/tapi.common.NameAndValueWrapper"
+        400:
+          description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context:
     get:
       tags:
@@ -3121,7 +3415,8 @@ definitions:
   tapi.common.Context:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
-    - $ref: "#/definitions/tapi.notification.ContextAugmentation3"
+    - $ref: "#/definitions/tapi.fm.ContextAugmentation3"
+    - $ref: "#/definitions/tapi.notification.ContextAugmentation4"
     - $ref: "#/definitions/tapi.streaming.ContextAugmentation1"
     - $ref: "#/definitions/tapi.streaming.ContextAugmentation2"
     - type: "object"
@@ -3475,6 +3770,72 @@ definitions:
       state:
         description: "The requested update of Administrative State."
         $ref: "#/definitions/tapi.common.AdministrativeState"
+  tapi.fm.ActiveCondition:
+    allOf:
+    - $ref: "#/definitions/tapi.common.GlobalClass"
+    - type: "object"
+      properties:
+        target-object-type:
+          type: "string"
+          description: "The ActiveCondition instance is related to the object instance\
+            \ (of a global class - with UUID) with this ObjectType value.\r\n    \
+            \            Alternatively, the ActiveCondition is related to the object\
+            \ instance of a local class, whose global object has this ObjectType value."
+        target-object-identifier:
+          type: "string"
+          description: "The ActiveCondition instance is related to the object instance\
+            \ (of a global class) with this UUID value.\r\n                Alternatively,\
+            \ the ActiveCondition is related to the object instance of a local class,\
+            \ whose global object has this UUID value."
+        event-time-stamp:
+          type: "string"
+          description: "The best knowledge of the time of the event which originated\
+            \ this ActiveCondition instance."
+        target-object-name:
+          type: "array"
+          description: "The ActiveCondition instance is related to the object instance\
+            \ with this list of names."
+          items:
+            $ref: "#/definitions/tapi.common.NameAndValue"
+        additional-info:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.common.NameAndValue"
+        source-indicator:
+          description: "The possible source of this ActiveCondition instance."
+          $ref: "#/definitions/tapi.notification.SourceIndicator"
+        layer-protocol-name:
+          description: "The ActiveCondition instance is related to a resource with\
+            \ this layer protocol value."
+          $ref: "#/definitions/tapi.common.LayerProtocolName"
+        layer-protocol-qualifier:
+          type: "array"
+          description: "The ActiveCondition instance is related to a resource with\
+            \ these layer protocol qualifier values."
+          items:
+            type: "string"
+        target-local-object-type:
+          type: "string"
+          description: "The ActiveCondition instance is related to the object instance\
+            \ of a local class, whose global object has targetObjectType value."
+        target-local-object-identifier:
+          type: "string"
+          description: "The ActiveCondition instance is related to the object instance\
+            \ of a local class, whose global object has targetObjectIdentifier value."
+        target-object-dri:
+          type: "string"
+          description: "Data Resource Identifier of the target object as per RFC 8040."
+      description: "none"
+  tapi.fm.ActiveConditionAugmentation1:
+    type: "object"
+    properties:
+      detected-condition:
+        description: "none"
+        $ref: "#/definitions/tapi.fm.DetectedCondition"
+    x-augmentation:
+      prefix: "tapi-fm"
+      namespace: "urn:onf:otcc:yang:tapi-fm"
   tapi.fm.AlarmInfo:
     type: "object"
     properties:
@@ -3532,6 +3893,15 @@ definitions:
     properties:
       tapi-fm:alarm-info:
         $ref: "#/definitions/tapi.fm.AlarmInfo"
+  tapi.fm.ContextAugmentation3:
+    type: "object"
+    properties:
+      fault-management-context:
+        description: "Augments the base TAPI Context with FaultManagementContext model."
+        $ref: "#/definitions/tapi.fm.context.FaultManagementContext"
+    x-augmentation:
+      prefix: "tapi-fm"
+      namespace: "urn:onf:otcc:yang:tapi-fm"
   tapi.fm.DetectedCondition:
     type: "object"
     properties:
@@ -3593,7 +3963,7 @@ definitions:
         $ref: "#/definitions/tapi.fm.PmMetricInfo"
   tapi.fm.DetectedConditionWrapper:
     properties:
-      tapi-fm:detected-condition:
+      detected-condition:
         $ref: "#/definitions/tapi.fm.DetectedCondition"
   tapi.fm.DetectorInfo:
     type: "object"
@@ -3738,6 +4108,28 @@ definitions:
     properties:
       tapi-fm:tca-info:
         $ref: "#/definitions/tapi.fm.TcaInfo"
+  tapi.fm.context.FaultManagementContext:
+    allOf:
+    - type: "object"
+      properties:
+        active-condition:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.fm.faultmanagementcontext.ActiveCondition"
+      description: "Augments the base TAPI Context with FaultManagementContext model."
+  tapi.fm.context.FaultManagementContextWrapper:
+    properties:
+      tapi-fm:fault-management-context:
+        $ref: "#/definitions/tapi.fm.context.FaultManagementContext"
+  tapi.fm.faultmanagementcontext.ActiveCondition:
+    allOf:
+    - $ref: "#/definitions/tapi.fm.ActiveCondition"
+    - $ref: "#/definitions/tapi.fm.ActiveConditionAugmentation1"
+  tapi.fm.faultmanagementcontext.ActiveConditionWrapper:
+    properties:
+      active-condition:
+        $ref: "#/definitions/tapi.fm.faultmanagementcontext.ActiveCondition"
   tapi.notification.AttributeValueChange:
     type: "object"
     properties:
@@ -3748,7 +4140,7 @@ definitions:
     properties:
       attribute-value-change:
         $ref: "#/definitions/tapi.notification.AttributeValueChange"
-  tapi.notification.ContextAugmentation3:
+  tapi.notification.ContextAugmentation4:
     type: "object"
     properties:
       notification-context:
