--- a/OAS/tapi-oam.yaml
+++ b/OAS/tapi-oam.yaml
@@ -1,8 +1,8 @@
 ---
 swagger: "2.0"
 info:
-  description: "\r\n        This module contains TAPI Notification Model definitions.\r\
-    \n        Source: TapiNotification.uml\r\n        - The TAPI YANG models included\
+  description: "\r\n        This module contains TAPI Connectivity Model definitions.\r\
+    \n        Source: TapiConnectivity.uml\r\n        - The TAPI YANG models included\
     \ in this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The\
     \ YANG specifications have been generated from the corresponding UML model using\
     \ the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
@@ -17,13 +17,14 @@ info:
     \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2023 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
-    \ the Apache License 2.0.,\r\n        This module contains TAPI Topology Model\
-    \ definitions.\r\n        Source: TapiTopology.uml\r\n        - The TAPI YANG\
-    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\r\
-    \n        - The YANG specifications have been generated from the corresponding\
-    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
+    \ the Apache License 2.0.,\r\n        This module contains TAPI Path Computation\
+    \ Model definitions.\r\n        Source: TapiPathComputation.uml\r\n        - The\
+    \ TAPI YANG models included in this TAPI release are a *normative* part of the\
+    \ TAPI SDK.\r\n        - The YANG specifications have been generated from the\
+    \ corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n    \
+    \    <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\n        and\
+    \ further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\r\
+    \n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
     \n        - Status of YANG model artifacts can be determined by referring to the\
     \ corresponding UML artifacts.\r\n        As described in the UML models, some\
     \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
@@ -65,23 +66,6 @@ info:
     \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2023 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
-    \ the Apache License 2.0.,\r\n        This module contains TAPI Path Computation\
-    \ Model definitions.\r\n        Source: TapiPathComputation.uml\r\n        - The\
-    \ TAPI YANG models included in this TAPI release are a *normative* part of the\
-    \ TAPI SDK.\r\n        - The YANG specifications have been generated from the\
-    \ corresponding UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n    \
-    \    <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\n        and\
-    \ further edited manually to comply with the [ONF IISOMI UML2YANG mapping guidelines]\r\
-    \n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n        As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
-    \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n        YANG models included in this release may not be backward compatible\
-    \ with previous TAPI releases.\r\n        Copyright (c) 2023 Open Networking Foundation\
-    \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0.,\r\n        This module contains TAPI Common Model definitions.\r\
     \n        Source: TapiCommon.uml\r\n        - The TAPI YANG models included in\
     \ this TAPI release are a *normative* part of the TAPI SDK.\r\n        - The YANG\
@@ -98,8 +82,24 @@ info:
     \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.\r\n        Copyright (c) 2023 Open Networking Foundation\
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
-    \ the Apache License 2.0.,\r\n        This module contains TAPI Connectivity Model\
-    \ definitions.\r\n        Source: TapiConnectivity.uml\r\n        - The TAPI YANG\
+    \ the Apache License 2.0.,\r\n        This module contains TAPI Notification Model\
+    \ definitions.\r\n        Source: TapiNotification.uml\r\n        - The TAPI YANG\
+    \ models included in this TAPI release are a *normative* part of the TAPI SDK.\r\
+    \n        - The YANG specifications have been generated from the corresponding\
+    \ UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
+    \n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
+    \ mapping guidelines]\r\n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
+    \n        - Status of YANG model artifacts can be determined by referring to the\
+    \ corresponding UML artifacts.\r\n        As described in the UML models, some\
+    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
+    \n        - The ONF TAPI release process does not guarantee backward compatibility\
+    \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
+    \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
+    \n        YANG models included in this release may not be backward compatible\
+    \ with previous TAPI releases.\r\n        Copyright (c) 2023 Open Networking Foundation\
+    \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
+    \ the Apache License 2.0.,\r\n        This module contains TAPI Topology Model\
+    \ definitions.\r\n        Source: TapiTopology.uml\r\n        - The TAPI YANG\
     \ models included in this TAPI release are a *normative* part of the TAPI SDK.\r\
     \n        - The YANG specifications have been generated from the corresponding\
     \ UML model using the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
@@ -116,7 +116,7 @@ info:
     \ (ONF). All rights reserved.\r\n        License: This module is distributed under\
     \ the Apache License 2.0."
   version: "2.1.3"
-  title: "tapi-notification,tapi-topology,tapi-oam,tapi-streaming,tapi-path-computation,tapi-common,tapi-connectivity\
+  title: "tapi-connectivity,tapi-path-computation,tapi-oam,tapi-streaming,tapi-common,tapi-notification,tapi-topology\
     \ API"
 host: "localhost:1234"
 consumes:
