Last commit for 2.4.1
TapiPhotonic: readonly on PowerProperties/powerSpectralDensity.
Published TR-547-TAPI Reference Implementation Agreement_v2.1
Published TapiGenDoc_v2.4.1
Published TAPI_Alarm_TCA_List_v2.1.0
Published HighLevelDiff_Tapi2.1.3To2.4.1

--- a/OAS/tapi-photonic-media.yaml
+++ b/OAS/tapi-photonic-media.yaml
@@ -64253,7 +64253,8 @@ definitions:
       power-spectral-density:
         type: "string"
         description: "This describes how power of a signal  is distributed over frequency\
-          \ specified in nW/MHz"
+          \ specified in nW/MHz.\r\n                Note that this parameter is not\
+          \ configurable."
       total-power:
         type: "string"
         description: "The total power at any point in a channel specified in dBm."
